...
  Created by Sebastian Kuhlen on 28.05.16.
  Copyright © 2016 RWTH Aachen. All rights reserved.
*/

"apple_ban" = "This experiment is no longer available.";
"app_name" = "phyphox";
"actions" = "Actions";
"action_settings" = "Settings";
"title_activity_experiment" = "phyphox";
"newExperiment" = "Add experiment";
"newExperimentSimple" = "Add simple experiment";
"newExperimentPhyphoxInfo" = "Visit phyphox.org to create more advanced experiments including data analysis and share them with colleagues, students and friends.";
"newExperimentInputTitle" = "Title";
...
"sensorNotAvailableWarningText1" = "The sensor";
"sensorNotAvailableWarningText2" = "is not available. Usually this means, that your device simply does not have this type of sensor.";
"sensorNotAvailableWarningMoreInfo" = "More info";
"sensorNotAvailableWarningMoreInfoURL" = "http://phyphox.org/faq/#faqMissingSensor";
"appleBanWarningMoreInfo" = "More info";
"appleBanWarningMoreInfoURL" = "http://phyphox.org/faq/#faqAppleBan";
"ok" = "OK";
"accept" = "Accept";
"tryagain" = "Try again";
"doContinue" = "Continue";
"close" = "Close";
"next" = "Next";
"cancel" = "Cancel";
"unknown" = "unknown";
"rename" = "Rename";
"delete" = "Delete";
"select" = "--select--";
"chooseOption" = "Choose an option";
"confirmDelete" = "Do you want to delete this experiment from your collection?";
"confirmDeleteTitle" = "Confirm delete?";
"stop" = "Stop";
...
"switchColumns3" = "View: 3 columns";
"toggleBrightMode" = "Bright mode";
"fontSize" = "Font size";
"show_description" = "Experiment info";
"save_locally" = "Add experiment to collection";
"save_locally_message" = "This experiment has been opened from a remote source. Do you want to add it to your experiment collection?";
"save_locally_button" = "Save to collection";
"save_locally_done" = "Experiment successfully added to collection.";
"save_state" = "Save experiment state";
"save_state_category" = "Saved experiment states";
"save_state_message" = "You can save the state of this experiment including your data to your collection or share it with a third-party app.";
"url_invalid" = "Invalid URL";
"url_invalid_msg" = "This experiment is just a link, but no valid URL was found.";
"save_state_title" = "Title";
"save_state_save" = "To collection";
"save_state_share" = "Share";
"save_state_subject" = "Experiment state for phyphox";
"save_state_default_title" = "Measurement";
"save_state_success" = "State has been saved to your collection.";
"timedRun" = "Timed run";
"pick_exportSets" = "Pick the data sets to export.";
"pick_exportFormat" = "Choose the data format.";
"noDrawableData" = "No drawable data.";
"categoryNewExperiment" = "Simple custom experiments";
"categoryRawSensor" = "Raw Sensors";
...
