...

    private let stringHandler = StringTranslationHandler()

    var handlers: [String : ElementHandler]

    init() {
        handlers = ["title": titleHandler, "category": categoryHandler, "description": descriptionHandler]
    }

    func beginElement(attributes: [String : String]) throws {
        stringHandler.clear()
    }

...
