...
    static let Attitude = MapSensorType(rawValue: 1 << 7) //128
    static let Gravity = MapSensorType(rawValue: 1 << 8) //256
}

class CreateExperimentViewController: UITableViewController {
    private var selectedSensors = MapSensorType.None
    private var experimentTitle: String?
    private var rateString: String?
    
    private final let TOTAL_NUM_OF_SENSORS = 9
    
    public var onExperimentCreated: ((String)->())?
    
...
